@@ -1,5 +1,10 @@
 2008-02-08  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem.c: (totem_action_load_media):
+	Fix message when trying to play DVB and plugins are missing
+
+2008-02-08  Bastien Nocera  <hadess@hadess.net>
+
 	* src/backend/bacon-video-widget-gst-0.10.c:
 	(bacon_video_widget_can_play):
 	* src/backend/bacon-video-widget-xine.c:
